Shorten some code.